# nicegfx

./: Cargo.toml  build.rs
pre_assets/shaders/: simple.vert
src/: hal_state.rs  local_state.rs  main.rs  user_input.rs  winit_state.rs
